2001-09-10  Seth Robertson  <seth@yeah.baka.org>

	* include/libbk.h: BK_RETURN no longer coredump on !B

2001-09-08  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_bits.c: Bit operations created

2001-09-04  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_cksum.c (b_in_cksum): Add in_cksum from Net4BSD

2001-09-03  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_string.c: Create 64 bit version of atou and atoi.
	(bk_string_atoflag/bk_string_flagtoa): Hide flags representation
	for ascii conversion.
	(bk_string_quote): Function to quote strings for output.

2001-08-31  Seth Robertson  <seth@yeah.baka.org>

	* src/proto.c: Full prototype "Hello World".  Will need more work
	(or a different version!) once additional functionality becomes
	ready.

	* lib/b_error.c (bk_error_idump): Get working, reverse order.
	(be_error_output): Enable time output.
	(bk_error_iprint): output errors during runtime only if hi priority

2001-08-30  Seth Robertson  <seth@yeah.baka.org>

	* test/test_stringconv.c: Test program now operational.  atoish
	functions tested.  Hash function tested.  String tokenization
	tested.  Debugging tested.  Config tested.

	* lib/b_config.c (config_manage): Make work
	(load_config_from_file): Fgets is the correct function...
	(bck_create): DLL must be unordered if no cmp funs

	* lib/b_stdfun.c: Create standard helper functions

	* include/libbk.h (BK_ENV_GWD): Fix definition

	* lib/b_general.c (bk_general_debug_config): Single function to
	configure debugging.

	* lib/b_fun.c (bk_fun_reset_debug): New function to reset debug
	levels of all entered functions.

2001-08-29  Seth Robertson  <seth@yeah.baka.org>

	* test/test_stringconv.c: Fill out string test program.

	* lib/b_string.c (bk_string_rip): Add rip to terminate strings on bad chars

2001-08-26  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_string.c (bk_string_printbuf): Fix binary output function.

	* include/libbk.h: BK_GENERAL_* macros to check for B allocation
	before dereference.
