@@ -1,3 +1,8 @@
+2001-09-10  Alexander Dupuy  <dupuy@cs.columbia.edu>
+
+	* lib/b_error.c (be_error_output): avoid infinite recursion, Unix
+	dependency
+
 2001-09-10  Seth Robertson  <seth@yeah.baka.org>
 
 	* include/libbk.h: BK_RETURN no longer coredump on !B
